src/bootstrap/bloodc/src/parser/snapshots/bloodc__parser__tests__parenthesized_or_pattern.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: None,
    imports: [],
    declarations: [
        Function(
            FnDecl {
                attrs: [],
                vis: Private,
                qualifiers: FnQualifiers {
                    is_const: false,
                    is_async: false,
                    is_unsafe: false,
                },
                name: Spanned {
                    node: SymbolU32 {
                        value: 1,
                    },
                    span: Span {
                        start: 3,
                        end: 4,
                        start_line: 1,
                        start_col: 4,
                    },
                },
                type_params: None,
                params: [],
                return_type: None,
                effects: None,
                spec_clauses: [],
                where_clause: None,
                body: Some(
                    Block {
                        statements: [],
                        expr: Some(
                            Expr {
                                kind: Match {
                                    scrutinee: Expr {
                                        kind: Path(
                                            ExprPath {
                                                segments: [
                                                    ExprPathSegment {
                                                        name: Spanned {
                                                            node: SymbolU32 {
                                                                value: 2,
                                                            },
                                                            span: Span {
                                                                start: 15,
                                                                end: 16,
                                                                start_line: 1,
                                                                start_col: 16,
                                                            },
                                                        },
                                                        args: None,
                                                    },
                                                ],
                                                span: Span {
                                                    start: 15,
                                                    end: 16,
                                                    start_line: 1,
                                                    start_col: 16,
                                                },
                                            },
                                        ),
                                        span: Span {
                                            start: 15,
                                            end: 16,
                                            start_line: 1,
                                            start_col: 16,
                                        },
                                    },
                                    arms: [
                                        MatchArm {
                                            pattern: Pattern {
                                                kind: Paren(
                                                    Pattern {
                                                        kind: Or(
                                                            [
                                                                Pattern {
                                                                    kind: Literal(
                                                                        Literal {
                                                                            kind: Int {
                                                                                value: 1,
                                                                                suffix: None,
                                                                            },
                                                                            span: Span {
                                                                                start: 20,
                                                                                end: 21,
                                                                                start_line: 1,
                                                                                start_col: 21,
                                                                            },
                                                                        },
                                                                    ),
                                                                    span: Span {
                                                                        start: 20,
                                                                        end: 21,
                                                                        start_line: 1,
                                                                        start_col: 21,
                                                                    },
                                                                },
                                                                Pattern {
                                                                    kind: Literal(
                                                                        Literal {
                                                                            kind: Int {
                                                                                value: 2,
                                                                                suffix: None,
                                                                            },
                                                                            span: Span {
                                                                                start: 24,
                                                                                end: 25,
                                                                                start_line: 1,
                                                                                start_col: 25,
                                                                            },
                                                                        },
                                                                    ),
                                                                    span: Span {
                                                                        start: 24,
                                                                        end: 25,
                                                                        start_line: 1,
                                                                        start_col: 25,
                                                                    },
                                                                },
                                                                Pattern {
                                                                    kind: Literal(
                                                                        Literal {
                                                                            kind: Int {
                                                                                value: 3,
                                                                                suffix: None,
                                                                            },
                                                                            span: Span {
                                                                                start: 28,
                                                                                end: 29,
                                                                                start_line: 1,
                                                                                start_col: 29,
                                                                            },
                                                                        },
                                                                    ),
                                                                    span: Span {
                                                                        start: 28,
                                                                        end: 29,
                                                                        start_line: 1,
                                                                        start_col: 29,
                                                                    },
                                                                },
                                                            ],
                                                        ),
                                                        span: Span {
                                                            start: 20,
                                                            end: 29,
                                                            start_line: 1,
                                                            start_col: 21,
                                                        },
                                                    },
                                                ),
                                                span: Span {
                                                    start: 19,
                                                    end: 30,
                                                    start_line: 1,
                                                    start_col: 20,
                                                },
                                            },
                                            guard: None,
                                            body: Expr {
                                                kind: Literal(
                                                    Literal {
                                                        kind: Bool(
                                                            true,
                                                        ),
                                                        span: Span {
                                                            start: 34,
                                                            end: 38,
                                                            start_line: 1,
                                                            start_col: 35,
                                                        },
                                                    },
                                                ),
                                                span: Span {
                                                    start: 34,
                                                    end: 38,
                                                    start_line: 1,
                                                    start_col: 35,
                                                },
                                            },
                                            span: Span {
                                                start: 19,
                                                end: 38,
                                                start_line: 1,
                                                start_col: 20,
                                            },
                                        },
                                        MatchArm {
                                            pattern: Pattern {
                                                kind: Wildcard,
                                                span: Span {
                                                    start: 40,
                                                    end: 41,
                                                    start_line: 1,
                                                    start_col: 41,
                                                },
                                            },
                                            guard: None,
                                            body: Expr {
                                                kind: Literal(
                                                    Literal {
                                                        kind: Bool(
                                                            false,
                                                        ),
                                                        span: Span {
                                                            start: 45,
                                                            end: 50,
                                                            start_line: 1,
                                                            start_col: 46,
                                                        },
                                                    },
                                                ),
                                                span: Span {
                                                    start: 45,
                                                    end: 50,
                                                    start_line: 1,
                                                    start_col: 46,
                                                },
                                            },
                                            span: Span {
                                                start: 40,
                                                end: 50,
                                                start_line: 1,
                                                start_col: 41,
                                            },
                                        },
                                    ],
                                },
                                span: Span {
                                    start: 9,
                                    end: 52,
                                    start_line: 1,
                                    start_col: 10,
                                },
                            },
                        ),
                        span: Span {
                            start: 7,
                            end: 54,
                            start_line: 1,
                            start_col: 8,
                        },
                    },
                ),
                span: Span {
                    start: 0,
                    end: 54,
                    start_line: 1,
                    start_col: 1,
                },
            },
        ),
    ],
    span: Span {
        start: 0,
        end: 54,
        start_line: 1,
        start_col: 1,
    },
}
